--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sign"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2024"
 readme = "README.md"
 license = "AGPL-3.0-only"
@@ -12,7 +12,10 @@ cc = "1.2.41"
 [dependencies]
 data-encoding = "2.9.0"
 ntex = { version = "2.16.0", features = ["compio"] }
+rust-embed = "8.8.0"
 serde = { version = "1.0.228", features = ["derive"] }
+thiserror = "2.0.17"
+toml = "0.9.8"
 
 [profile.release]
 codegen-units = 1
